# SBG-TIR-L2-STARS

./: .gitignore  README.md  SBGv001_L2T_STARS.jl  SBGv001_L2T_STARS_runconfig.yaml  pyproject.toml
SBG_TIR_L2_STARS/: L2T_STARS.py  L2T_STARS.xml  __init__.py  process_ECOSTRESS_data_fusion.jl
SBG_TIR_L2_STARS/BRDF/: BRDF.py  SZA.py  __init__.py  statistical_radiative_transport.txt
SBG_TIR_L2_STARS/LPDAAC/: LPDAACDataPool.py
SBG_TIR_L2_STARS/STARS_jl/: .gitignore  LICENSE  Project.toml  README.md  instantiate.jl  instantiate.py
SBG_TIR_L2_STARS/STARS_jl/src/: BBoxes.jl  FilterSmoother.jl  HLS.jl  MODLAND.jl  Points.jl  STARS.jl  VIIRS.jl  VNP43.jl  sentinel_tiles.jl
SBG_TIR_L2_STARS/VIIRS/: VIIRSDataPool.py  VIIRSDownloader.py  VIIRS_CMR_LOGIN.py  VNP09GA.py  VNP43IA4.py  VNP43MA3.py  __init__.py
SBG_TIR_L2_STARS/VNP43NRT/: VNP43NRT.py  __init__.py  process_VNP43NRT.jl
SBG_TIR_L2_STARS/VNP43NRT_jl/: Project.toml
SBG_TIR_L2_STARS/VNP43NRT_jl/src/: VNP43NRT.jl
SBG_TIR_L2_STARS/daterange/: __init__.py  daterange.py
